--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - db_data:/var/lib/mysql # default path of data persistence. Will this work?
     restart: always
     environment:
-      MYSQL_USER: root
+      MYSQL_USER: root       # this won't be used in production
       MYSQL_DATABASE: account
     ports:
       - "3306:3306"
@@ -15,8 +15,8 @@ services:
     build:
       context: .
     environment:
-      MYSQL_PASSWORD: password
-      MYSQL_DATABASE: account
+      MYSQL_PASSWORD: root    # this won't be used in productions
+      MYSQL_DB: account
       MYSQL_HOST: db
       MYSQL_PORT: 3306
       MYSQL_USER: root
